tdoc/common/static/tdoc/styles.css
/* ... */
div.tdoc-exec > div.tdoc-exec-controls {
    display: flex;
    flex-direction: column;
    row-gap: 0.3rem;
}
div.literal-block-wrapper
        > div.tdoc-exec:is([class^=highlight-], [class*=" highlight-"]) pre {
    border-right: 1px solid var(--pst-color-border);
}
div.literal-block-wrapper > div.tdoc-exec > div.tdoc-exec-controls {
    margin-top: 0.3rem;
    margin-bottom: 0.3rem;
    margin-right: 0.3rem;
}

/* SQL execution results */
.table > tbody > tr:nth-child(odd).tdoc-no-results {
    background-image: linear-gradient(-45deg,
        var(--pst-color-table-row-zebra-low-bg) 5%,
        var(--pst-color-table-row-zebra-high-bg) 5% 50%,
        var(--pst-color-table-row-zebra-low-bg) 50% 55%,
        var(--pst-color-table-row-zebra-high-bg) 55%);
    background-size: 28.28px 28.28px;
}
.tdoc-error {
    margin-bottom: 1rem;
    border: 1px solid var(--pst-color-danger);
    padding: 0.5rem;
    background-image: linear-gradient(-45deg,
        var(--pst-color-table-row-zebra-low-bg) 5%,
        var(--pst-color-table-row-zebra-high-bg) 5% 50%,
        var(--pst-color-table-row-zebra-low-bg) 50% 55%,
        var(--pst-color-table-row-zebra-high-bg) 55%);
    background-size: 28.28px 28.28px;
}

/* Dynamically-rendered blocks */
.tdoc-dyn {
    margin: 1rem auto;
    text-align: center;
}
.tdoc-dyn.align-left {
    text-align: left;
}
.tdoc-dyn.align-right {
    text-align: right;
}
.tdoc-dyn > div.spinner {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    color: var(--pst-color-text-base);
    background-color: var(--pst-color-background);
}
.tdoc-dyn:is(.rendered, [data-processed]) > div.spinner {
    display: none;
}
html[data-tdoc-dev] .tdoc-dyn:not(.rendered, [data-processed]) {
    /* Override border attributes set on the element. */
    border: 1px solid var(--pst-color-danger) !important;
    /* TODO: Ensure a minimum height */
}

/* JSXGraph boards */
.tdoc-dyn[data-type=jsxgraph] {
    /* The magic value is used to detect the default in jsxgraph.js. */
    aspect-ratio: 142857 / 142857;
    border-color: var(--pst-color-border);
    border-radius: 0.25rem;
}
:fullscreen > .tdoc-dyn[data-type=jsxgraph] {
    border: none;
    border-radius: 0;
}
.JXG_navigation > .JXG_navigation_button {
    padding-top: 0.2rem;
    padding-bottom: 0.2rem;
}
.JXG_navigation > .JXG_navigation_button > svg {
    top: unset;
}
@media print {
    .tdoc-dyn[data-type=jsxgraph] .JXG_navigation {
        display: none;
    }
}

/* Mermaid diagrams */
.tdoc-dyn[data-type=mermaid]:not([data-processed]) {
    display: none;
}
.tdoc-dyn[data-type=mermaid].background-light > svg {
    background-color: var(--tdoc-background-light);
}
.tdoc-dyn[data-type=mermaid].background-dark > svg {
    background-color: var(--tdoc-background-dark);
}
.mermaidTooltip {
    position: absolute;
    max-width: 30%;
    border: 1px solid var(--pst-color-border);
    border-radius: 0.25rem;
    padding: 2px 4px;
    background-color: var(--pst-color-surface);
    font-size: var(--pst-font-size-milli);
    pointer-events: none;
    z-index: 100;
}

/* Drop-down menus */
.dropdown-menu {
    --bs-dropdown-link-color: var(--pst-color-text-muted);
    --bs-dropdown-link-hover-color: var(--pst-color-text-muted);
    --bs-dropdown-link-active-color: var(--pst-color-text-muted);
    --bs-dropdown-padding-y: 0.2rem;
    box-shadow: 0 0.2rem 0.5rem var(--pst-color-shadow),
                0 0 0.0625rem var(--pst-color-shadow) !important;
    border-color: var(--pst-color-border);
    background-color: var(--pst-color-background);
    color: var(--pst-color-text-muted);
}
.dropdown-menu .dropdown-item {
    display: inline-flex;
    align-items: center;
    padding-left: 0.5rem;
    padding-right: var(--bs-dropdown-item-padding-x);
    cursor: pointer;
}
.dropdown-menu .btn__icon-container.tdoc:is([class^=fa-], [class*=" fa-"]) {
    font: var(--fa-font-solid);
    display: inline-flex;
    width: 1.7rem;
    align-items: center;
    justify-content: center;
}

/* Content footer */
.bd-footer-content .bd-footer-content__inner {
    padding-right: 0;
}
.bd-footer-content .tdoc-version {
    float: right;
    margin-left: 2rem;
}

/* Create a hanging indent for signatures. */
.sig {
    padding-left: 3rem;
    text-indent: -3rem;
}

/* Login functionality */
.article-header-buttons > .dropdown-user > button::before {
    font: var(--fa-font-regular);
    content: '\f007';
}
html[data-tdoc-user-tags] .article-header-buttons > .dropdown-user
        > button::before {
    font: var(--fa-font-solid);
}
html[data-tdoc-user-tags] .article-header-buttons > .dropdown-user
        .dropdown-item.btn-login {
    display: none;
}
html:not([data-tdoc-user-tags]) .article-header-buttons > .dropdown-user
        .dropdown-item.btn-settings {
    display: none;
}
.tdoc-domain-storage {
    position: absolute;
    width: 0px;
    height: 0px;
}

/* Revert table style changes from pydata-sphinx-theme in Bootstrap modals. */
.modal .table {
    --bs-table-bg: var(--bs-body-bg);
    --bs-table-color: var(--bs-emphasis-color);
    border-color: var(--bs-table-border-color);
    border-style: initial;
    border-width: initial;
    color: var(--bs-table-color);
}
.modal .table thead tr {
    background-color: initial;
    border-bottom-color: initial;
    border-bottom-style: initial;
    border-bottom-width: initial;
}
.modal .table td ~ td, .modal .table td ~ th,
.modal .table th ~ td, .modal .table th ~ th {
    border-left-color: initial;
    border-left-style: initial;
    border-left-width: initial;
}
.modal .table thead tr {
    background-color: initial;
    border-bottom-color: initial;
    border-bottom-style: initial;
    border-bottom-width: initial;
}
.modal .table tbody tr:nth-child(odd), .modal .table tbody tr:nth-child(even),
.modal .table tbody tr:hover {
    background-color: initial;
}
/* ... */

